# osr-pycore

./: justfile  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: docs.yaml  image-dev.yaml  release.yaml
src/osr_pycore/io/: README.md
src/osr_pycore/tools/: pack_out.py  publish_assets.py  source_meta.py
src/osr_pycore/utils/: README.md  audit.py  console.py  lineage.py  logger.py  progress.py  versioner.py
